# Cost-compensation-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: actions.yml
src/: main.py  schemas.py  services.py
tests/: test_calculator.py
