[tool.poetry]
name = "averagewastecalculator"
version = "0.1.0"
description = ""
authors = ["KairzhanovMurat <murat99010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
ruff = "^0.6.9"
pytest = "^8.3.3"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
preview = true
select = ["E", "F", "UP", "W"]

